feat(liste): ajoute champs à l'ajout ou l'édition

--- a/src/app/pages/listes/unique/details/liste-details.page.html
+++ b/src/app/pages/listes/unique/details/liste-details.page.html
@@ -35,7 +35,7 @@
     <ul class="chapitres-liste">
       <li
         class="chapitre-item"
-        *ngFor="let chapitre of produit?.schema; let index = index"
+        *ngFor="let chapitre of produit?.pValeurs; let index = index"
       >
         <div class="schedule-outer">
           <span class="schedule-day"
