--- a/src/app/side-menu/styles/side-menu.scss
+++ b/src/app/side-menu/styles/side-menu.scss
@@ -14,7 +14,7 @@
     --padding-end: 0px;
     --padding-top: 0px;
     --padding-bottom: 0px;
-    --background: var(--ion-color-dark-tint);
+    --background: var(--ion-color-light-shade);
   }
 
   ion-content {
@@ -38,11 +38,12 @@
     padding-left: var(--page-margin);
 
     .user-name {
+      color: var(--ion-color-primary);
       margin: 0px 0px 5px;
     }
 
     .user-handle {
-      color: var(--ion-color-light-shade);
+      color: var(--ion-color-primary);
       margin: 0px;
       font-size: 14px;
       font-weight: 400;
